# pinecone-text

./: .gitignore  LICENSE.txt  README.md  falcon-refinedweb-files.json  mypy.ini  pyproject.toml
.github/workflows/: CD.yaml  CI.yaml  docs.yml  pr.yaml
pinecone_text/dense/: __init__.py  base_dense_ecoder.py  cohere_encoder.py  jina_encoder.py  openai_encoder.py  sentence_transformer_encoder.py
pinecone_text/hybrid/: __init__.py  hybrid_convex.py
pinecone_text/sparse/: __init__.py  base_sparse_encoder.py  bm25.py  bm25_encoder.py  bm25_temp.py  bm25_tokenizer.py  decay_time_score_encoder.py  splade.py  splade_encoder.py
pinecone_text/src/sparse/: bm25.py
tests/: test_bm25.py  test_bm25_tokenizer.py  test_decay_boosting_function.py  test_openai_encoder.py  test_sentence_transfomer_encoder.py  test_splade.py
tests/contrib/: test_jina_encoder.py
tests/system/: test_cohere_encoder.py  test_openai_encoder.py
tests/unit/: test_bm25_tokenizer.py  test_cohere_encoder.py  test_hybrid_convex_scale.py  test_jina_encoder.py  test_openai_encoder.py  test_sentence_transfomer_encoder.py  test_splade.py
