[tool.poetry]
name = "pinecone-text"
version = "0.4.2"
description = "Text utilities library by Pinecone.io"
authors = ["Pinecone.io"]
readme = "README.md"
packages = [{include = "pinecone_text"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
torch = "^2.0.0"
transformers = "^4.26.1"
sentence-transformers = "^2.0.0"
wget = "^3.2"
mmh3 = "^3.1.0"
nltk = "^3.6.5"
numpy = "^1.24.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pdoc = "^13.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
