[tool.poetry]
name = "pinecone-text"
version = "0.7.1"
description = "Text utilities library by Pinecone.io"
authors = ["Pinecone.io"]
readme = "README.md"
packages = [{include = "pinecone_text"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
torch = { version = ">=1.13.1", optional = true }
transformers = { version = ">=4.26.1", optional = true }
sentence-transformers = { version = ">=2.0.0", optional = true }
wget = "^3.2"
mmh3 = "^3.1.0"
nltk = "^3.6.5"
numpy = ">=1.21.5,<=1.26.0"
openai =  { version = "^1.2.3", optional = true }
cohere = { version = "^4.37", optional = true }

[tool.poetry.extras]
splade = ["torch", "transformers", "sentence-transformers"]
dense = ["torch", "transformers", "sentence-transformers", "openai"]
openai = ["openai"]
cohere = ["cohere"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pdoc = "^13.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
